v1.11.1 (expected around 2025-11-01)
====================

Nothing yet!

v1.11.0 (2025-07-02)
====================

- Removed support for Python 3.8 (which has reached its end of life in Oct 2024).

- Implement caching of PowerSphericalPotentialwCutoff to speed up evaluation of
  the forces during orbit integration.

- Turn physical units on when surface density input to AnyAxisymmetricRazorThinDiskPotential
  is given in physical units.

- Allow TwoPowerSphericalPotential to be evaluated at r=0 (#729).

- Switch to controlling compilation options through environment variables to be
  more compatible with modern pip/setup.py standards.

v1.10.2 (2025-03-03)
====================

 - Implemented the IAS15 integrator of Rein & Spiegel 2015.

 - Speed-up the C implementation of PowerSphericalPotentialwCutoff (#706).

 - Combine the drift calculations in the Python leapfrog integrator for a small
   speed-up (#690).

- Clarify the use of non-equispaced time arrays in orbit integration (#711).

- Fix the handling of unbound orbits in the Orbit action-angle interface (#712).

 - Move the checks for non-axisymmetric and dissipative potentials from internal to
   public potential/force evaluation functions (e.g., from _evaluate[Potentials,
   Rforces, phitorques, zforces] to evaluate[Potentials, Rforces, phitorques, zforces])
   for performance improvements.

- Add an isDissipative attribute to force classes.

- Print warning when initializing an Orbit with a SkyCoord that does not have the Sun's
  positional and velocity parameters set (#715).

v1.10.1 (2024-11-01)
====================

- Propagate general plotting keywords in Potential.plot/plotPotentials. Also allow
  plotting potentials on physical axes.

- Added the generalized particle-spray model as galpy.df.basestreamspraydf with two
  subclasses: chen24spraydf and fadal15spraydf. Enabled integrating orbits of stream
  particles with the progenitor's potential. Deprecating the old particle-spray