@@ -1,0 +1,5 @@
+Oblate Staeckel wrapper potential
+=======================================
+
+.. autoclass:: galpy.potential.OblateStaeckelWrapperPotential
+   :members: __init__
